--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/arya-purple/theme.css",
-              "./node_modules/primeng/resources/primeng.min.css"
+              "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.js"]
           },
