--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "angular-cli-ghpages": "^1.0.3",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.2.0",
     "font-awesome": "^4.7.0",
     "primeicons": "^5.0.0",
